# narsil

./: .dockerignore  .gitignore  .markdownlint.json  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  biome.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
benchmarks/server/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  narsil-server.Dockerfile  pyproject.toml  requirements.in  requirements.txt  run-all.sh
benchmarks/server/docs/: large-datasets.md
benchmarks/server/results/runs/20260630T195304Z/: comparison.json  engine-elasticsearch.json  engine-meilisearch.json  engine-meilisearch.md  (+10 more)
benchmarks/server/src/ir_bench/: __init__.py  aggregate.py  embed.py
benchmarks/server/tests/: test_aggregate_run_selection.py
ir-benchmark/: .gitignore  Dockerfile  README.md  docker-compose.yml  narsil-server.Dockerfile  pyproject.toml  requirements.in  requirements.txt  run-all.sh
ir-benchmark/config/: benchmark.toml
ir-benchmark/results/: 20260629T000141Z.json  20260629T000141Z.md  comparison-20260629T011015Z.json  comparison-20260629T011015Z.md  comparison-20260629T022753Z.json  comparison-20260629T022753Z.md  comparison-20260629T104255Z.json  comparison-20260629T104255Z.md  comparison-20260629T142524Z.json  comparison-20260629T142524Z.md  comparison-20260629T144106Z.json  comparison-20260629T144106Z.md  comparison-20260629T145625Z.json  comparison-20260629T145625Z.md  comparison-20260629T153645Z.json  comparison-20260629T153645Z.md  comparison-best-config-20260629T142524Z.json  comparison-best-config-20260629T142524Z.md  comparison-best-config-20260629T144106Z.json  comparison-best-config-20260629T144106Z.md  comparison-best-config-20260629T145625Z.json  comparison-best-config-20260629T145625Z.md  comparison-best-config-20260629T153645Z.json  comparison-best-config-20260629T153645Z.md  engine-elasticsearch-bestconfig.json  engine-elasticsearch-bestconfig.md  engine-elasticsearch.json  engine-elasticsearch.md  engine-meilisearch.json  engine-meilisearch.md  engine-narsil-bestconfig.json  engine-narsil-bestconfig.md  engine-narsil.json  engine-narsil.md  engine-opensearch-bestconfig.json  engine-opensearch-bestconfig.md  engine-opensearch.json  engine-opensearch.md  engine-qdrant-bestconfig.json  engine-qdrant-bestconfig.md  (+8 more)
ir-benchmark/results/runs/20260630T195304Z/: comparison.md  engine-elasticsearch.md  engine-typesense.json
ir-benchmark/src/ir_bench/: __init__.py  aggregate.py  cli.py  embed.py
ir-benchmark/src/ir_bench/core/: comparison.py  config.py  datasets.py  driver.py  embeddings.py  environment.py  ground_truth.py  harness.py  latency.py  recall_tuning.py  registry.py  reporter.py  runfile.py  throughput_report.py  track_common.py  types.py  vector_runner.py
ir-benchmark/src/ir_bench/drivers/: _lucene.py  elasticsearch.py  meilisearch.py  narsil.py  opensearch.py  qdrant.py  typesense.py  weaviate.py
ir-benchmark/src/narsil_ir_bench/: __init__.py  cli.py  client.py  config.py  datasets.py  environment.py  latency.py  reporter.py  runfile.py
ir-benchmark/tests/: test_comparison_markdown.py  test_run_store.py
(+139 files in other folders)
