[project]
name = "narsil-ir-bench"
version = "0.1.0"
description = "Information-retrieval benchmark harness that drives Narsil over HTTP and scores keyword retrieval quality against published BEIR baselines."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "ir-datasets",
    "pytrec-eval-terrier",
    "httpx",
]

[project.scripts]
narsil-ir-bench = "narsil_ir_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/narsil_ir_bench"]
