[project]
name = "ir-bench"
version = "0.2.0"
description = "Engine-neutral information-retrieval benchmark harness that scores keyword retrieval quality across search engines against published BEIR baselines."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "ir-datasets",
    "pytrec-eval-terrier",
    "httpx",
]

[project.scripts]
ir-bench = "ir_bench.cli:main"
ir-bench-aggregate = "ir_bench.aggregate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ir_bench"]
