[project]
name = "ir-bench"
version = "0.3.0"
description = "Engine-neutral information-retrieval benchmark harness that scores keyword, dense vector, and hybrid retrieval across search engines against published BEIR baselines and at matched ANN recall."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "ir-datasets",
    "pytrec-eval-terrier",
    "httpx",
    "numpy",
    "fastembed",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
ir-bench = "ir_bench.cli:main"
ir-bench-aggregate = "ir_bench.aggregate:main"
ir-bench-embed = "ir_bench.embed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ir_bench"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
